--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,5 @@ dependencies {
     compile 'com.github.pinguo-zhouwei:CustomPopwindow:2.1.1'
     compile 'com.carson_ho:SearchLayout:1.0.1'
     compile 'com.zt.maven.widget:refreshview:1.0.2'
-    //compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
