--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".activity.PersonalActivity" />
         <activity android:name=".activity.ShowCookeryActivity" />
         <activity android:name=".activity.SearchActivity" />
-        <activity android:name=".activity.CookDetailsActivity"></activity>
+        <activity android:name=".activity.CookDetailsActivity" />
+        <activity android:name=".activity.SendMessageActivity"></activity>
     </application>
 
 </manifest>
