--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity android:name=".activity.ShowCookeryActivity" />
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.CookDetailsActivity" />
-        <activity android:name=".activity.SendMessageActivity"></activity>
+        <activity android:name=".activity.SendMessageActivity" />
+        <activity android:name=".activity.MessageDetailActivity"></activity>
     </application>
 
 </manifest>
